--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "puppeteer": "^10.4.0"
+    "puppeteer": "^10.4.0",
+    "xlsx": "^0.17.3"
   }
 }
